--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    <organization>
+        <name>Perforce Software AS</name>
+    </organization>
+    
     <build>
         <plugins>
             <plugin>
@@ -18,6 +22,10 @@
                 <artifactId>nbm-maven-plugin</artifactId>
                 <version>4.6</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <licenseName>MIT License (MIT)</licenseName>
+                    <licenseFile>${project.basedir}/LICENSE.txt</licenseFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
