JR-10924 Modified placeholder texts for easier identification of TODOs

--- a/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
+++ b/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
@@ -1,6 +1,6 @@
 #Localized module labels. Defaults taken from POM (<name>, <description>, <groupId>) if unset.
-OpenIDE-Module-Name=JRebel for NetBeans installer
-OpenIDE-Module-Short-Description=JRebel for NetBeans installer
-OpenIDE-Module-Long-Description=JRebel for NetBeans installer
+OpenIDE-Module-Name=JRebel for NetBeans Installer
+OpenIDE-Module-Short-Description=JRebel for NetBeans Installer: Short Description
+OpenIDE-Module-Long-Description=JRebel for NetBeans Installer: Long Description
 OpenIDE-Module-Display-Category=Utilities
 #Mon Jun 21 09:44:46 EEST 2021
