Update Bundle.properties Added descriptions for installer

--- a/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
+++ b/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
@@ -1,6 +1,6 @@
 #Localized module labels. Defaults taken from POM (<name>, <description>, <groupId>) if unset.
 OpenIDE-Module-Name=JRebel for NetBeans Installer
-OpenIDE-Module-Short-Description=JRebel for NetBeans Installer: Short Description
-OpenIDE-Module-Long-Description=JRebel for NetBeans Installer: Long Description
+OpenIDE-Module-Short-Description=JRebel for NetBeans Installer: JRebel is a productivity tool that allows develoopers too reload code changes instantly.
+OpenIDE-Module-Long-Description=JRebel for NetBeans Installer: JRebel is a productivity tool that allows developers to reload code changes instantly. It skips the rebuild, restart, and redeploy cycle common in Java development. JRebel enables developers to get more done in the same amount of time and stay in the flow while coding. JRebel supports a majority of real-world enterprise java stacks and is easy to install into existing development environments.
 OpenIDE-Module-Display-Category=Utilities
 #Mon Jun 21 09:44:46 EEST 2021
