--- a/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
+++ b/src/main/resources/org/zeroturnaround/netbeans/open/Bundle.properties
@@ -3,4 +3,7 @@ OpenIDE-Module-Name=JRebel for NetBeans Installer
 OpenIDE-Module-Short-Description=JRebel for NetBeans Installer: Short Description
 OpenIDE-Module-Long-Description=JRebel for NetBeans Installer: Long Description
 OpenIDE-Module-Display-Category=Utilities
+Installer.refreshing.updates.info=Refreshing updates information...
+Installer.update.unit.provider.name=ZT Provider TEST
+Installer.update.unit.provider.displayname=Zeroturnaround Provider TEST
 #Mon Jun 21 09:44:46 EEST 2021
