--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
   <properties>
     <releaseVersion>${project.version}</releaseVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
 
   <organization>
