--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
   
   <scm>
     <url>https://github.com/zeroturnaround/netbeans-jrebel-open-plugin</url>
-    <connection>scm:git:https@github.com:zeroturnaround/netbeans-jrebel-open-plugin.git</connection>
-    <developerConnection>scm:git:https@github.com:zeroturnaround/netbeans-jrebel-open-plugin.git</developerConnection>
+    <connection>scm:git:https://github.com/zeroturnaround/netbeans-jrebel-open-plugin.git</connection>
+    <developerConnection>scm:git:https://github.com/zeroturnaround/netbeans-jrebel-open-plugin.git</developerConnection>
   </scm>
 
   <build>
